--- a/packages/models/SpreadModel.ipynb
+++ b/packages/models/SpreadModel.ipynb
@@ -40,7 +40,7 @@
    "source": [
     "async def kraken(symbol, start_date, end_date):\n",
     "    data = []\n",
-    "    tardis_client = TardisClient(api_key='TD.EGbmz1ZjK48X8Umz.xA3stUptkohr9Bs.kkKNJo2yL78bZVP.YJRJl3xrqDmyvJE.ymLsIiFZJ-tTtLx.s2Xh')\n",
+    "    tardis_client = TardisClient(api_key='REDACTED')\n",
     "\n",
     "    messages = tardis_client.replay(\n",
     "        exchange=\"kraken\",\n",
