--- a/packages/simulation/SimRunner.ipynb
+++ b/packages/simulation/SimRunner.ipynb
@@ -601,21 +601,77 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 83,
+   "id": "242077d2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Runs on-chain inference\n",
+    "def onChain_inference(vol5b, vol10b, vol20b):\n",
+    "    return\n",
+    "\n",
+    "# Gets on-chain balance of Ethereum\n",
+    "def onChain_eth():\n",
+    "    return\n",
+    "\n",
+    "# Gets on-chain balance of USDC\n",
+    "def onChain_usdc():\n",
+    "    return\n",
+    "\n",
+    "# Gets total on-chain balance (in USD terms)\n",
+    "def onChain_balance(price):\n",
+    "    return\n",
+    "\n",
+    "# Buy amount for maximum profitability\n",
+    "def buy_profitable(eth, usdc, price, fee):\n",
+    "    return (math.sqrt((usdc*eth*(1-fee))) - usdc) / (1-fee)\n",
+    "\n",
+    "# Sell amount for maximum profitability\n",
+    "def sell_profitable(eth, usdc, price, fee):\n",
+    "    return (math.sqrt((usdc*eth*(1-fee))/price) - eth) / (1-fee)\n",
+    "\n",
+    "# Buy eth_amt of eth on-chain, return profit aka [(ETH_RECEIVED * Price) - USDC_PAID]\n",
+    "def onChain_buy(eth_amt, price):\n",
+    "    return\n",
+    "    \n",
+    "# Sell eth_amt of eth on-chain, return profit aka [USDC_RECEIVED - (ETH_PAID * Price)]\n",
+    "def onChain_sell(eth_amt, price):\n",
+    "    return\n",
+    "\n",
+    "def onChain_trade(direction, eth, price, fee):\n",
+    "    if direction == 'buy':\n",
+    "        return onChain_buy(eth, price)\n",
+    "    else:\n",
+    "        return onChain_sell(eth, price)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 46,
    "id": "a460f093",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# On chain simulation"
+    "# On chain simulation\n",
+    "history3 = {\"fee\": [], \"eth\": [], \"usdc\": [], \"price\": [], \"balance\": [], \"lvr\": []}\n",
+    "lvr = 0\n",
+    "for date, row in df.T.iteritems():\n",
+    "    eth = onChain_eth()\n",
+    "    usdc = onChain_usdc()\n",
+    "    fee = onChain_inference(row['vol_5b'], row['vol_10b'], row['vol_20b'])\n",
+    "    history3['fee'].append(fee)\n",
+    "    history3['eth'].append(eth)\n",
+    "    history3['usdc'].append(usdc)\n",
+    "    history3['price'].append(row['price'])\n",
+    "    history3['balance'].append(onChain_balance(row['price']))\n",
+    "    buy_amt = buy_profitable(eth, usdc, row['price'], fee) != 0\n",
+    "    sell_amt = sell_profitable(eth, usdc, row['price'], fee) != 0\n",
+    "    if (buy_amt > 0):\n",
+    "        lvr += onChain_trade('buy', buy_amt, row['price'], fee)\n",
+    "    elif (sell_amt > 0):\n",
+    "        lvr += onChain_trade('sell', sell_amt, row['price'], fee)\n",
+    "    history3['lvr'].append(lvr / onChain_balance(row['price']))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0478b46e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
