--- a/packages/simulation/SimRunner.ipynb
+++ b/packages/simulation/SimRunner.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 105,
    "id": "2c1e9236",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,9 @@
     "import inference_pb2 as pb2\n",
     "import matplotlib.pyplot as plt\n",
     "import math\n",
-    "import statistics"
+    "import statistics\n",
+    "import json\n",
+    "from web3 import Web3"
    ]
   },
   {
@@ -602,25 +604,68 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "242077d2",
+   "id": "7ce05cab",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Runs on-chain inference\n",
     "def onChain_inference(vol5b, vol10b, vol20b):\n",
+    "    w3 = Web3(Web3.HTTPProvider('http://localhost:8545')) \n",
+    "    contract_address = '0x804f1Ee0ceFED750eFA8A3ec7a6ffddaD509dDf1'\n",
+    "    contract_abi = json.loads(\"Vanna.json\")\n",
+    "    contract = w3.eth.contract(address=contract_address, abi=contract_abi)\n",
+    "    account = w3.eth.account.from_key('REDACTED')\n",
+    "    txn = contract.functions.buildTransaction({\n",
+    "        'chainId': 901,  # Vanna\n",
+    "        'gas': 2000000,\n",
+    "        'gasPrice': w3.toWei('0.01', 'gwei'),\n",
+    "        'nonce': w3.eth.getTransactionCount(account.address),\n",
+    "    })\n",
+    "\n",
+    "    signed_txn = w3.eth.account.signTransaction(txn, private_key=account.privateKey)\n",
+    "    tx_hash = w3.eth.sendRawTransaction(signed_txn.rawTransaction)\n",
+    "    \n",
     "    return\n",
     "\n",
     "# Gets on-chain balance of Ethereum\n",
     "def onChain_eth():\n",
+    "    w3 = Web3(Web3.HTTPProvider('http://localhost:8545')) \n",
+    "    contract_address = '0x8f86403A4DE0BB5791fa46B8e795C547942fE4Cf'\n",
+    "    contract_abi = json.loads(\"PoolManager.json\")\n",
+    "    contract = w3.eth.contract(address=contract_address, abi=contract_abi)\n",
+    "    account = w3.eth.account.from_key('REDACTED')\n",
+    "    txn = contract.functions.buildTransaction({\n",
+    "        'chainId': 901,  # Vanna\n",
+    "        'gas': 2000000,\n",
+    "        'gasPrice': w3.toWei('0.01', 'gwei'),\n",
+    "        'nonce': w3.eth.getTransactionCount(account.address),\n",
+    "    })\n",
+    "\n",
+    "    signed_txn = w3.eth.account.signTransaction(txn, private_key=account.privateKey)\n",
+    "    tx_hash = w3.eth.sendRawTransaction(signed_txn.rawTransaction)\n",
     "    return\n",
     "\n",
     "# Gets on-chain balance of USDC\n",
     "def onChain_usdc():\n",
+    "    w3 = Web3(Web3.HTTPProvider('http://localhost:8545')) \n",
+    "    contract_address = '0x8f86403A4DE0BB5791fa46B8e795C547942fE4Cf'\n",
+    "    contract_abi = json.loads(\"PoolManager.json\")\n",
+    "    contract = w3.eth.contract(address=contract_address, abi=contract_abi)\n",
+    "    account = w3.eth.account.from_key('REDACTED')\n",
+    "    txn = contract.functions.buildTransaction({\n",
+    "        'chainId': 901,  # Vanna\n",
+    "        'gas': 2000000,\n",
+    "        'gasPrice': w3.toWei('0.01', 'gwei'),\n",
+    "        'nonce': w3.eth.getTransactionCount(account.address),\n",
+    "    })\n",
+    "\n",
+    "    signed_txn = w3.eth.account.signTransaction(txn, private_key=account.privateKey)\n",
+    "    tx_hash = w3.eth.sendRawTransaction(signed_txn.rawTransaction)\n",
     "    return\n",
     "\n",
     "# Gets total on-chain balance (in USD terms)\n",
     "def onChain_balance(price):\n",
-    "    return\n",
+    "    return onChain_eth() * price + onChain_usdc()\n",
     "\n",
     "# Buy amount for maximum profitability\n",
     "def buy_profitable(eth, usdc, price, fee):\n",
@@ -632,10 +677,38 @@
     "\n",
     "# Buy eth_amt of eth on-chain, return profit aka [(ETH_RECEIVED * Price) - USDC_PAID]\n",
     "def onChain_buy(eth_amt, price):\n",
+    "    w3 = Web3(Web3.HTTPProvider('http://localhost:8545')) \n",
+    "    contract_address = '0x8f86403A4DE0BB5791fa46B8e795C547942fE4Cf'\n",
+    "    contract_abi = json.loads(\"PoolManager.json\") \n",
+    "    contract = w3.eth.contract(address=contract_address, abi=contract_abi)\n",
+    "    account = w3.eth.account.from_key('REDACTED')\n",
+    "    txn = contract.functions.buildTransaction({\n",
+    "        'chainId': 901,  # Vanna\n",
+    "        'gas': 2000000,\n",
+    "        'gasPrice': w3.toWei('0.01', 'gwei'),\n",
+    "        'nonce': w3.eth.getTransactionCount(account.address),\n",
+    "    })\n",
+    "\n",
+    "    signed_txn = w3.eth.account.signTransaction(txn, private_key=account.privateKey)\n",
+    "    tx_hash = w3.eth.sendRawTransaction(signed_txn.rawTransaction)\n",
     "    return\n",
     "    \n",
     "# Sell eth_amt of eth on-chain, return profit aka [USDC_RECEIVED - (ETH_PAID * Price)]\n",
     "def onChain_sell(eth_amt, price):\n",
+    "    w3 = Web3(Web3.HTTPProvider('http://localhost:8545')) \n",
+    "    contract_address = '0x8f86403A4DE0BB5791fa46B8e795C547942fE4Cf'\n",
+    "    contract_abi = json.loads(\"PoolManager.json\")\n",
+    "    contract = w3.eth.contract(address=contract_address, abi=contract_abi)\n",
+    "    account = w3.eth.account.from_key('REDACTED')\n",
+    "    txn = contract.functions.buildTransaction({\n",
+    "        'chainId': 901,  # Vanna\n",
+    "        'gas': 2000000,\n",
+    "        'gasPrice': w3.toWei('0.01', 'gwei'),\n",
+    "        'nonce': w3.eth.getTransactionCount(account.address),\n",
+    "    })\n",
+    "\n",
+    "    signed_txn = w3.eth.account.signTransaction(txn, private_key=account.privateKey)\n",
+    "    tx_hash = w3.eth.sendRawTransaction(signed_txn.rawTransaction)\n",
     "    return\n",
     "\n",
     "def onChain_trade(direction, eth, price, fee):\n",
